add clock logic

--- a/index.html
+++ b/index.html
@@ -5,17 +5,25 @@
     <title>Clock</title>
     <link href="styles.css" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Source+Code+Pro:300,400" rel="stylesheet">
+    <script src="//code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+            crossorigin="anonymous"></script>
+    <script src="clock.js"></script>
 </head>
 <body>
 <div class="block">
-    <div class="line"><span class="active">IT</span>R<span class="active">IS</span>C<span>TEN</span><span>HALF</span></div>
-    <div class="line"><span>QUARTER</span><span>TWENTY</span></div>
-    <div class="line"><span>FIVE</span>C<span>MINUTES</span>H</div>
-    <div class="line"><span>PAST</span><span>TO</span>E<span>ONE</span><span>TWO</span></div>
-    <div class="line"><span>THREE</span><span>FOUR</span><span>FIVE</span></div>
-    <div class="line"><span>SIX</span><span>SEVEN</span><span>EIGHT</span></div>
-    <div class="line"><span>NINE</span><span>TEN</span><span>ELEVEN</span></div>
-    <div class="line"><span>TWELVE</span>L<span>OCLOCK</span></div>
+    <div class="line"><span class="it">IT</span>R<span class="is">IS</span>C<span class="minutes ten">TEN</span><span
+        class="minutes half">HALF</span></div>
+    <div class="line"><span class="minutes quarter">QUARTER</span><span class="minutes twenty">TWENTY</span></div>
+    <div class="line"><span class="minutes five">FIVE</span>C<span class="minutes numeric">MINUTES</span>H</div>
+    <div class="line"><span class="minutes past">PAST</span><span class="minutes to">TO</span>E<span class="hour one">ONE</span><span
+        class="hour two">TWO</span></div>
+    <div class="line"><span class="hour three">THREE</span><span class="hour four">FOUR</span><span class="hour five">FIVE</span>
+    </div>
+    <div class="line"><span class="hour six">SIX</span><span class="hour seven">SEVEN</span><span class="hour eight">EIGHT</span>
+    </div>
+    <div class="line"><span class="hour nine">NINE</span><span class="hour ten">TEN</span><span class="hour eleven">ELEVEN</span>
+    </div>
+    <div class="line"><span class="hour twelve">TWELVE</span>L<span class="hour oclock">OCLOCK</span></div>
 </div>
 </body>
 </html>
