--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Clock</title>
+    <title>Word Clock</title>
     <link href="styles.css" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Source+Code+Pro:300,400" rel="stylesheet">
     <script src="//code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="block">
-    <div class="line"><span class="it">IT</span>R<span class="is">IS</span>C<span class="minutes ten">TEN</span><span
+    <div class="line"><span class="it">ITS</span>R<span class="minutes a">A</span>C<span class="minutes ten">TEN</span><span
         class="minutes half">HALF</span></div>
     <div class="line"><span class="minutes quarter">QUARTER</span><span class="minutes twenty">TWENTY</span></div>
     <div class="line"><span class="minutes five">FIVE</span>C<span class="minutes numeric">MINUTES</span>H</div>
