--- a/index.html
+++ b/index.html
@@ -1,29 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Word Clock</title>
-    <link href="styles.css" rel="stylesheet">
-    <link href="//fonts.googleapis.com/css?family=Source+Code+Pro:300,400" rel="stylesheet">
-    <script src="//code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-            crossorigin="anonymous"></script>
+    <link href="favicon.ico" rel="icon" type="image/ico" />
+    <link href="styles.css" rel="stylesheet" />
+    <link href="//fonts.googleapis.com/css?family=Source+Code+Pro:300,400" rel="stylesheet" />
+    <script
+      src="//code.jquery.com/jquery-3.1.1.min.js"
+      integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+      crossorigin="anonymous"
+    ></script>
     <script src="clock.js"></script>
-</head>
-<body>
-<div class="block">
-    <div class="line"><span class="it">ITS</span>R<span class="minutes a">A</span>C<span class="minutes ten">TEN</span><span
-        class="minutes half">HALF</span></div>
-    <div class="line"><span class="minutes quarter">QUARTER</span><span class="minutes twenty">TWENTY</span></div>
-    <div class="line"><span class="minutes five">FIVE</span>C<span class="minutes numeric">MINUTES</span>H</div>
-    <div class="line"><span class="minutes past">PAST</span><span class="minutes to">TO</span>E<span class="hour one">ONE</span><span
-        class="hour two">TWO</span></div>
-    <div class="line"><span class="hour three">THREE</span><span class="hour four">FOUR</span><span class="hour five">FIVE</span>
+  </head>
+  <body>
+    <div class="block">
+      <div class="line">
+        <span class="it">ITS</span>R<span class="minutes a">A</span>C<span class="minutes ten">TEN</span
+        ><span class="minutes half">HALF</span>
+      </div>
+      <div class="line"><span class="minutes quarter">QUARTER</span><span class="minutes twenty">TWENTY</span></div>
+      <div class="line"><span class="minutes five">FIVE</span>C<span class="minutes numeric">MINUTES</span>H</div>
+      <div class="line">
+        <span class="minutes past">PAST</span><span class="minutes to">TO</span>E<span class="hour one">ONE</span
+        ><span class="hour two">TWO</span>
+      </div>
+      <div class="line">
+        <span class="hour three">THREE</span><span class="hour four">FOUR</span><span class="hour five">FIVE</span>
+      </div>
+      <div class="line">
+        <span class="hour six">SIX</span><span class="hour seven">SEVEN</span><span class="hour eight">EIGHT</span>
+      </div>
+      <div class="line">
+        <span class="hour nine">NINE</span><span class="hour ten">TEN</span><span class="hour eleven">ELEVEN</span>
+      </div>
+      <div class="line"><span class="hour twelve">TWELVE</span>L<span class="hour oclock">OCLOCK</span></div>
     </div>
-    <div class="line"><span class="hour six">SIX</span><span class="hour seven">SEVEN</span><span class="hour eight">EIGHT</span>
-    </div>
-    <div class="line"><span class="hour nine">NINE</span><span class="hour ten">TEN</span><span class="hour eleven">ELEVEN</span>
-    </div>
-    <div class="line"><span class="hour twelve">TWELVE</span>L<span class="hour oclock">OCLOCK</span></div>
-</div>
-</body>
+  </body>
 </html>
