--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,14 @@
 
   <head>
     <meta charset="utf-8" />
-    <link rel="icon"
-          href="%PUBLIC_URL%/favicon.ico" />
+    <link href="%PUBLIC_URL%/favicon.ico"
+          rel="icon"
+          sizes="any"
+          type="image/x-icon">
+    <link href="%PUBLIC_URL%/favicon.svg"
+          rel="icon"
+          sizes="any"
+          type="image/svg+xml">
     <link href="//fonts.googleapis.com/css?family=Source+Code+Pro:300,400"
           rel="stylesheet" />
     <meta name="viewport"
