--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link href="/index.css" rel="stylesheet" />
     <link href="//fonts.googleapis.com/css?family=Source+Code+Pro:300,400" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Word Clock</title>
